--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <!-- ===== NAVBAR ===== -->
     <nav class="navbar">
-      <h2 class="logo">Tasinul <span>Alam</span></h2>
+      <h2 class="logo">
+              <img src="Untitled.jpg" alt="HST Logo" class="nav-logo" />    
+    </h2>
 
       <ul class="nav-links">
         <li><a href="#hero">Home</a></li>
@@ -201,3 +203,4 @@
     <script src="js/contact.ts"></script>
   </body>
 </html>
+
