--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- ===== HERO SECTION ===== -->
     <header id="hero" class="hero">
-      <h1 class="fade-in">Hi, I'm <span>MD Tasinul Alam</span></h1>
+      <h1 class="fade-in">Hi, I'm <span>TASIN</span></h1>
       <p class="fade-in delay-1">Node.js • TypeScript • Express • MongoDB</p>
       <a href="#projects" class="btn fade-in delay-2">View My Projects</a>
     </header>
@@ -203,4 +203,5 @@
     <script src="js/contact.ts"></script>
   </body>
 </html>
+
 
